--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,9 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
 
-@layer components {
-  .site-title {
-    @apply font-mono font-medium tracking-tight text-tx bg-gradient-to-r from-sol-r to-sol-m bg-clip-text;
-  }
-}
+@import 'tailwindcss/components';
+@import '../atoms/headings.pcss';
+@import '../atoms/site_title.pcss';
+
+@import 'tailwindcss/utilities';
+@import "../atoms/page.pcss";
