Define more typography-related styles

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,7 +1,8 @@
 @import 'tailwindcss/base';
+@import "../atoms/typography.pcss";
+@import '../atoms/headings.pcss';
 
 @import 'tailwindcss/components';
-@import '../atoms/headings.pcss';
 @import '../atoms/site_title.pcss';
 
 @import 'tailwindcss/utilities';
