Replace `tailwindcss-padding-safe` with a bug-free custom implementation

--- a/src/atoms/page.pcss
+++ b/src/atoms/page.pcss
@@ -1,10 +1,10 @@
 @layer utilities {
   .pl-page {
-    @apply pl-2-safe sm:pl-4-safe lg:pl-8-safe;
+    @apply pls-2 sm:pls-4 lg:pls-8;
   }
 
   .pr-page {
-    @apply pr-2-safe sm:pr-4-safe lg:pr-8-safe;
+    @apply prs-2 sm:prs-4 lg:prs-8;
   }
 
   .px-page {
