Use Inter for cross-OS consistency

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -4,6 +4,7 @@
 
 @import 'tailwindcss/components';
 @import '../atoms/site_title.pcss';
+@import '../atoms/gradient-text.pcss';
 
 @import 'tailwindcss/utilities';
 @import "../atoms/page.pcss";
