Define the app entrypoint and the global headers

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,4 +1,5 @@
 @import 'tailwindcss/base';
+@import "../atoms/root.pcss";
 @import "../atoms/typography.pcss";
 @import '../atoms/headings.pcss';
 
