Define and use the `body-text` for consistent typography

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -30,6 +30,10 @@
     @apply bg-clip-text bg-gradient-to-r box-decoration-clone;
     @apply transition-colors duration-200;
   }
+
+  .body-text {
+    @apply text-2xl sm:text-3xl lg:text-4xl leading-snug;
+  }
 }
 
 @layer utilities {
