Reduce heading margins when printing

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -12,7 +12,7 @@
   }
 
   h2 {
-    @apply text-sm font-semibold uppercase mb-4 flex flex-row items-center gap-2;
+    @apply text-sm font-semibold uppercase mb-4 flex flex-row items-center gap-2 printing:mb-1;
 
     &::after {
       @apply content-[''] block h-px bg-neutral-200 dark:bg-neutral-900 grow;
