Stylise the bold tag to only affect font-weight

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -22,6 +22,10 @@
   strong {
     @apply font-medium text-neutral-900 dark:text-neutral-200;
   }
+
+  b {
+    @apply font-medium;
+  }
 }
 
 @layer components {
