--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -1,10 +1,10 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 @layer base {
   html {
-    @apply flex min-h-full bg-white text-neutral-700 dark:bg-black dark:text-neutral-400;
+    @apply flex min-h-full bg-bg font-mono leading-snug text-reg print:h-full print:w-full;
 
     --color-bg: theme(colors.white);
     --color-hl: theme(colors.neutral.200);
@@ -26,19 +26,20 @@
   }
 
   body {
-    @apply flex-1 flex flex-col;
+    /* Base text size not set on `html` to use 16px scale for spacing. */
+    @apply flex flex-1 flex-col font-mono text-[14px] pls-ch prs-ch pts-ln pbs-ln print:h-full print:w-full print:p-0;
   }
 
   h2 {
-    @apply text-sm font-semibold uppercase mb-4 flex flex-row items-center gap-2 printing:mb-1;
+    @apply mb-ln flex flex-row items-center gap-2 font-semibold lowercase printing:mb-2;
 
     &::after {
-      @apply content-[''] block h-px bg-neutral-200 dark:bg-neutral-900 grow;
+      @apply block h-px grow bg-hl content-[''];
     }
   }
 
   strong {
-    @apply font-medium text-neutral-900 dark:text-neutral-200;
+    @apply font-medium text-imp;
   }
 
   b {
@@ -47,40 +48,14 @@
 }
 
 @layer components {
-  .gradient-text {
+  .text-grad-lin {
     /* Set `text-tx`, `from-*` and `to-*` classes separately. */
-    @apply bg-clip-text bg-gradient-to-r box-decoration-clone;
-    @apply transition-colors duration-200;
+    @apply bg-gradient-to-r box-decoration-clone bg-clip-text;
   }
 
-  .body-text {
-    @apply text-2xl sm:text-3xl lg:text-4xl leading-snug;
-  }
-}
-
-@layer utilities {
-  .pt-page {
-    @apply pts-2 sm:pts-4 lg:pts-8;
-  }
-
-  .pr-page {
-    @apply prs-2 sm:prs-4 lg:prs-8;
-  }
-
-  .pb-page {
-    @apply pbs-2 sm:pbs-4 lg:pbs-8;
-  }
-
-  .pl-page {
-    @apply pls-2 sm:pls-4 lg:pls-8;
-  }
-
-  .px-page {
-    @apply pl-page pr-page;
-  }
-
-  .py-page {
-    @apply pt-page pb-page;
+  .text-grad-rad {
+    /* Set `text-tx`, `from-*` and `to-*` classes separately. */
+    @apply bg-gradient-radial box-decoration-clone bg-clip-text;
   }
 }
 
