Add styling for the blog posts

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -30,6 +30,7 @@
     @apply flex flex-1 flex-col font-mono text-[14px] pls-ch prs-ch pts-ln pbs-ln print:h-full print:w-full print:p-0;
   }
 
+  /* TODO: Disconnect from tag name */
   h2 {
     @apply mb-ln flex flex-row items-center font-semibold lowercase printing:mb-2;
 
