Use a taller line-height by default

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -9,7 +9,7 @@
 
 @layer base {
   html {
-    @apply flex min-h-full bg-bg font-mono leading-snug text-reg underline-offset-2 selection:bg-hl selection:text-imp print:h-full print:w-full;
+    @apply flex min-h-full bg-bg font-mono text-reg underline-offset-2 selection:bg-hl selection:text-imp print:h-full print:w-full;
 
     --color-bg: theme(colors.white);
     --color-hl: theme(colors.neutral.200);
