Use shades of blue for selection background

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -9,7 +9,13 @@
 
 @layer base {
   html {
-    @apply flex min-h-full bg-bg font-mono text-reg underline-offset-2 selection:bg-hl selection:text-imp print:h-full print:w-full;
+    @apply flex
+      min-h-full
+      font-mono text-reg
+      underline-offset-2
+      bg-bg
+      selection:bg-sky-200 dark:selection:bg-sky-950
+      print:h-full print:w-full;
 
     --color-bg: theme(colors.white);
     --color-hl: theme(colors.neutral.200);
