--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -17,22 +17,22 @@
       selection:bg-sky-200 dark:selection:bg-sky-950
       print:h-full print:w-full;
 
-    --color-bg: theme(colors.white);
-    --color-hl: theme(colors.neutral.200);
+    --color-bg: theme('colors.white');
+    --color-hl: theme('colors.neutral.200');
 
-    --color-low: theme(colors.neutral.400);
-    --color-reg: theme(colors.neutral.700);
-    --color-imp: theme(colors.neutral.900);
+    --color-low: theme('colors.neutral.400');
+    --color-reg: theme('colors.neutral.700');
+    --color-imp: theme('colors.neutral.900');
   }
 
   @media (prefers-color-scheme: dark) {
     html {
-      --color-bg: theme(colors.black);
-      --color-hl: theme(colors.neutral.800);
+      --color-bg: theme('colors.black');
+      --color-hl: theme('colors.neutral.800');
 
-      --color-low: theme(colors.neutral.600);
-      --color-reg: theme(colors.neutral.400);
-      --color-imp: theme(colors.neutral.200);
+      --color-low: theme('colors.neutral.600');
+      --color-reg: theme('colors.neutral.400');
+      --color-imp: theme('colors.neutral.200');
     }
   }
 
