--- a/packages/website/src/styles/index.pcss
+++ b/packages/website/src/styles/index.pcss
@@ -11,9 +11,10 @@
   html {
     @apply flex
       min-h-full
-      font-mono text-reg
-      underline-offset-2
       bg-bg
+      font-mono
+      text-reg
+      underline-offset-2
       selection:bg-sky-200 dark:selection:bg-sky-950
       print:h-full print:w-full;
 
@@ -38,16 +39,25 @@
 
   body {
     /* Base text size not set on `html` to use 16px scale for spacing. */
-    @apply flex flex-1 flex-col font-mono text-[14px] pls-ch prs-ch pts-ln pbs-ln print:h-full print:w-full print:p-0;
+    @apply flex flex-1 flex-col
+      font-mono
+      text-[14px]
+      pbs-ln pls-ch prs-ch pts-ln
+      print:h-full print:w-full
+      print:p-0;
   }
 }
 
 @layer components {
   .section-heading {
-    @apply mb-ln flex flex-row items-center font-semibold lowercase printing:mb-2;
+    @apply mb-ln
+      flex flex-row items-center
+      font-semibold
+      lowercase
+      printing:mb-2;
 
     &::after {
-      @apply content-[''] ml-ch block h-px grow bg-hl;
+      @apply ml-ch block h-px grow bg-hl content-[''];
     }
   }
 }
