Add fun fact about being [WIP]

--- a/packages/website/src/components/FunFact.astro
+++ b/packages/website/src/components/FunFact.astro
@@ -23,6 +23,7 @@
     'loves Shrek',
     'is secretly a dog on the Internet',
     'is a <del>pythonista</del> <del>pythoneer</del> parselmouth',
+    'is [🚧 WIP], like his code',
   ]
   const fact = facts[Math.floor(Math.random() * facts.length)] ?? ''
 
