Install Iconify packages instead of fetching icons

--- a/packages/website/src/components/ContactList.astro
+++ b/packages/website/src/components/ContactList.astro
@@ -8,13 +8,13 @@ const { contact: { emails = [], phones = [] } = {}, profiles = [] } = recivi.bio
 
 const items = [
   emails.map((email) => ({
-    icon: Object.freeze({ name: 'regular/envelope', source: 'font_awesome' }),
+    icon: Object.freeze({ name: 'mail', source: 'lucide' }),
     name: 'Email',
     url: `mailto:${email}`,
     text: email,
   })),
   phones.map((phone) => ({
-    icon: Object.freeze({ name: 'solid/phone', source: 'font_awesome' }),
+    icon: Object.freeze({ name: 'phone', source: 'lucide' }),
     name: 'Phone',
     url: `tel:+${phone.countryCode}${phone.number}`,
     text: `+${phone.countryCode} ${phone.number}`,
