Drop the 'guide' width, instead using `sm` breakpoint as the maximum for each column

--- a/packages/website/src/styles/base.css
+++ b/packages/website/src/styles/base.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .cntnr {
-    @apply pls prs w-full max-w-guide;
+    @apply pls prs w-full sm:max-w-screen-sm;
   }
 
   .hdiv {
