Remove margins from component definitions

--- a/packages/website/src/components/SiteHeader.astro
+++ b/packages/website/src/components/SiteHeader.astro
@@ -29,7 +29,7 @@ function getIsExactMatch(url: string): boolean {
 ---
 
 <header
-  class="cntnr mb-4 flex flex-col items-start justify-between gap-2 border-b py-4 sm:flex-row sm:items-center">
+  class="cntnr flex flex-col items-start justify-between gap-2 border-b py-4 sm:flex-row sm:items-center">
   <Link url="/">
     <!-- Class `inline-block` prevents underline from `Link`. -->
     <span
