Add docmentation for `<script>` block

--- a/packages/website/src/components/Kaomoji.astro
+++ b/packages/website/src/components/Kaomoji.astro
@@ -10,6 +10,8 @@
 </div>
 
 <script>
+  /** Render a waving kaomoji with randomly-chosen facial features. */
+
   /**
    * Returns a random element from the given array. If the array is empty, it
    * returns `undefined`.
