--- a/packages/website/src/styles/base.css
+++ b/packages/website/src/styles/base.css
@@ -8,7 +8,14 @@
   }
 
   .hdiv {
-    @apply -mx-4 my-4 flex items-center gap-2 font-medium before:h-px before:w-2 before:bg-surface1 after:h-px after:flex-grow after:bg-surface1;
+    @apply my-4 flex items-center gap-2 font-medium before:h-px before:bg-surface1 after:h-px after:flex-grow after:bg-surface1;
+
+    margin-left: calc(-1 * max(env(safe-area-inset-left), 1rem));
+    margin-right: calc(-1 * max(env(safe-area-inset-right), 1rem));
+  }
+
+  .hdiv:before {
+    width: calc(max(env(safe-area-inset-right), 1rem) - 0.5rem);
   }
 
   .pys {
