Use Tailwind plugin for safe area insets

--- a/packages/website/src/components/Table.astro
+++ b/packages/website/src/components/Table.astro
@@ -31,7 +31,7 @@ function isCurr(row: Row) {
         columns.map((column: ColumnSpec) => (
           <th
             scope="col"
-            class="first:pls last:prs px-2 text-left font-medium"
+            class="px-2 text-left font-medium first:pl-safe last:pr-safe"
             class:list={[{ 'w-px whitespace-nowrap': !column.isExpanding }]}>
             {column.name ?? column.id}
           </th>
@@ -56,7 +56,7 @@ function isCurr(row: Row) {
             )
             .map(([key, value], idx) => (
               <td
-                class="first:pls last:prs px-2 py-0.5"
+                class="px-2 py-0.5 first:pl-safe last:pr-safe"
                 class:list={[
                   { 'w-px whitespace-nowrap': !columns[idx]?.isExpanding },
                 ]}>
