--- a/packages/website/src/styles/base.css
+++ b/packages/website/src/styles/base.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .cntnr {
-    @apply pls prs w-full sm:max-w-screen-sm;
+    @apply w-full px-safe sm:max-w-screen-sm;
   }
 
   .hdiv {
