--- a/packages/website/src/styles/common.css
+++ b/packages/website/src/styles/common.css
@@ -1,7 +1,9 @@
 /*
-  This sheet defines styles that must apply to the complete site without needing
-  to define them everytime. These classes apply to content inside Markdown and
-  also markup defined in Astro components.
+  This sheet defines styles that must apply to the complete site, which includes both
+  content inside Markdown and markup defined in Astro components.
+
+  Compare this with `plugins/rehype_tailwind.ts` for styling that applies
+  specifically to Markdown content and not to Astro components.
 
   Imported by `main.astro`.
  */
@@ -39,20 +41,8 @@ a[href^='tel:'] {
   @apply after:content-["→"] hover:after:translate-x-1;
 }
 
-:not(pre) > code {
-  @apply border bg-surface0 px-1 py-0.5 not-italic;
-}
-
 h1 {
   @apply mb-2 text-3xl font-bold text-red sm:text-5xl;
-}
-
-hr {
-  @apply my-4 flex h-fit items-center justify-center border-none text-subtle after:content-["*\a0\a0*\a0\a0*"];
-}
-
-kbd {
-  @apply rounded border border-b-2 border-b-red bg-surface0 px-1 pb-0.5 pt-1;
 }
 
 p {
@@ -62,12 +52,4 @@ p {
 strong,
 b {
   @apply font-medium;
-}
-
-blockquote {
-  @apply border-l-2 border-l-red pl-2;
-}
-
-pre {
-  @apply my-4 border p-2;
 }
