--- a/packages/website/src/components/Date.astro
+++ b/packages/website/src/components/Date.astro
@@ -4,11 +4,9 @@ import type { Date as RcvDate } from 'recivi'
 import { getRcvDate, dateReadable, dateDisplay } from '@/utils/date_fmt'
 
 interface Props {
-  date: Date | RcvDate | Promise<Date | RcvDate>
+  date: Date | RcvDate
 }
 let { date } = Astro.props
-
-date = await Promise.resolve(date)
 
 function isDate(value: Date | RcvDate): value is Date {
   return value instanceof Date
