Add another fun fact

--- a/packages/website/src/components/FunFact.astro
+++ b/packages/website/src/components/FunFact.astro
@@ -17,6 +17,7 @@
     'knows how to exit Vim',
     'prefers Vim over Emacs',
     'wakes up each day furious to be laboring under capitalism',
+    'writes code; <em>sometimes gets paid for it</em>',
     'writes code that works on his machine',
     'reads (and writes) the f&#**^% manual',
     'tries turning it off and on again',
